[gd_scene load_steps=5 format=3 uid="uid://24ckasmw5fc5"]

[ext_resource type="Texture2D" uid="uid://bacmbjwtbh6f3" path="res://assets/sprites/doors/keyYellow.png" id="1_raodn"]
[ext_resource type="Script" uid="uid://xjmnxhl4kbvr" path="res://assets/scenes/entities/key/key.gd" id="1_td6f2"]
[ext_resource type="AudioStream" uid="uid://o55wjrglqsm3" path="res://assets/sounds/sounds/confirmation_002.ogg" id="3_lpwbt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_td6f2"]
radius = 40.0

[node name="Key" type="Area2D"]
collision_layer = 0
script = ExtResource("1_td6f2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.8125, 0.8125)
texture = ExtResource("1_raodn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_td6f2")

[node name="KeySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lpwbt")
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="KeySound" to="." method="_on_key_sound_finished"]
